--- a/style.css
+++ b/style.css
@@ -2,16 +2,19 @@ body {
   margin: 0;
   pointer-events: none;
 }
+img {
+  width: 100%;
+}
 #screen {
   position: relative;
   width: 100%;
   aspect-ratio: 16/9;
   background-color: grey;
 }
+
 #posts {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(5, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
