Added user funcs

--- a/style.css
+++ b/style.css
@@ -12,9 +12,13 @@ img {
   background-color: grey;
 }
 
-#posts {
+#posts,
+#users {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 3px;
-  grid-row-gap: 3px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+.user {
+  border: 4px solid black;
 }
